--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,10 +27,10 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
     }
 
-    /*lintOptions {
+  lintOptions {
         textReport true
         textOutput 'stdout'
-    }*/
+    }
 
     packagingOptions {
         exclude 'META-INF/rxjava.properties'
@@ -45,18 +45,22 @@ dependencies {
     // Retrofit
     // JSON Parsing
     // RxJava
-    compile 'com.android.support:appcompat-v7:26.+'
+    //noinspection GradleCompatible
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.android.support:design:26.+'
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.google.code.gson:gson:2.6.1'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile 'io.reactivex:rxandroid:1.2.1'
     compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:cardview-v7:26.0.0-alpha1'
-    compile 'com.android.support:recyclerview-v7:26.0.0-alpha1'
+    compile 'com.android.support:cardview-v7:26.+'
+    compile 'com.android.support:recyclerview-v7:26.+'
     compile 'io.reactivex.rxjava2:rxjava:2.0.9'
+    compile 'com.github.bumptech.glide:glide:4.1.1'
     // compile 'io.reactivex:rxjava:1.1.6'
-
+    compile 'com.android.support:appcompat-v7:26.+'
+    compile 'com.android.support:design:26.+'
+    //    compile 'com.kymjs.rxvolley:rxvolley:1.1.4'
+    //    compile 'com.kymjs.rxvolley:okhttp3:1.1.4'
+    compile project(':rxvolley')
 }
